# vls

./: Cargo.toml  README.md
benches/: parsing_bench.rs
src/: comparator.rs  constraint.rs  error.rs  lib.rs  utils.rs  valid_chars.rs  version.rs  vls.rs
tests/: parsing_invalid.rs  parsing_valid.rs
